[documentation]: Fix more links
 * Add description for some missing crossref macros.
 * Remove a couple of dangling anchors
 * Remove spurious '.' at the beginning of some descriptions
 * Fix misspelled macro name

--- a/documentation/content/en/articles/ipsec-must/_index.adoc
+++ b/documentation/content/en/articles/ipsec-must/_index.adoc
@@ -80,7 +80,7 @@ crossref::ipsec-must[code, Maurer's Universal Statistical Test (for block size8 
 
 We also need a way to capture the raw network data.
 A program called man:tcpdump[1] lets you do this, if you have enabled the
-_Berkeley Packet Filter_ interface in your crossref::ipsec-must[kernel].
+_Berkeley Packet Filter_ interface in your crossref::ipsec-must[kernel,src/sys/i386/conf/KERNELNAME].
 
 The command:
 
