--- a/documentation/content/en/articles/pam/_index.adoc
+++ b/documentation/content/en/articles/pam/_index.adoc
@@ -411,7 +411,7 @@ It is essential to understand that PAM's configuration system is centered on cha
 [[pam-config-breakdown]]
 === Breakdown of a Configuration Line
 
-As explained in crossref:pam[pam-config-file], each line in [.filename]#/etc/pam.conf# consists of four or more fields: the service name, the facility name, the control flag, the module name, and zero or more module arguments.
+As explained in crossref:pam[pam-config-file, PAM Policy Files], each line in [.filename]#/etc/pam.conf# consists of four or more fields: the service name, the facility name, the control flag, the module name, and zero or more module arguments.
 
 The service name is generally (though not always) the name of the application the statement applies to.
 If you are unsure, refer to the individual application's documentation to determine what service name it uses.
