--- a/documentation/content/en/books/dev-model/_index.adoc
+++ b/documentation/content/en/books/dev-model/_index.adoc
@@ -691,7 +691,7 @@ The committer who recommended the new committer will, in the general case, take 
 
 When a contributor is given their commit bit, a
 crossref:dev-model[tool-pgp, Pretty Good Privacy]-signed email is sent from either
-crossref:dev-model[role-core-secretary], crossref:dev-model[role-ports-manager, Ports Manager], or nik@freebsd.org to both admins@freebsd.org, the assigned mentor, the new committer, and core confirming the approval of a new account.
+crossref:dev-model[role-core-secretary, Core Secretary], crossref:dev-model[role-ports-manager, Ports Manager], or nik@freebsd.org to both admins@freebsd.org, the assigned mentor, the new committer, and core confirming the approval of a new account.
 The mentor then gathers a password line, crossref:dev-model[tool-ssh2, Secure Shell] public
 key, and PGP key from the new committer and sends them to
 crossref:dev-model[role-admin, Admin].
