--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -154,7 +154,7 @@ Such routes only show up on the host that supports the alias and all other hosts
 The final line (destination subnet `224`) deals with multicasting.
 
 Various attributes of each route can be seen in the `Flags` column.
-crossref:advanced-networking[routeflags,.Commonly Seen Routing Table Flags] summarizes some of these flags and their meanings:
+crossref:advanced-networking[routeflags,Commonly Seen Routing Table Flags] summarizes some of these flags and their meanings:
 
 [[routeflags]]
 .Commonly Seen Routing Table Flags
@@ -656,7 +656,7 @@ This can be particularly useful when a FreeBSD machine is acting as a gateway to
 ==== Basic Settings
 
 Before configuring a FreeBSD machine as an AP, the kernel must be configured with the appropriate networking support for the wireless card as well as the security protocols being used.
-For more details, see crossref:advanced-networking[network-wireless-basic].
+For more details, see crossref:advanced-networking[network-wireless-ap-basic, Basic Settings].
 
 [NOTE]
 ====
@@ -757,7 +757,7 @@ The client machine found the AP and can be associated with it:
 
 This section focuses on setting up a FreeBSD access point using the WPA2 security protocol.
 More details regarding WPA and the configuration of WPA-based wireless clients
-can be found in crossref:advanced-networking[network-wireless-wpa].
+can be found in crossref:advanced-networking[network-wireless-wpa, WPA with EAP-TLS].
 
 The man:hostapd[8] daemon is used to deal with client authentication and key management on the WPA2-enabled AP.
 
@@ -826,7 +826,7 @@ wlan0: flags=8943<UP,BROADCAST,RUNNING,PROMISC,SIMPLEX,MULTICAST> metric 0 mtu 1
 ....
 
 Once the AP is running, the clients can associate with it.
-See crossref:advanced-networking[network-wireless-wpa] for more details.
+See crossref:advanced-networking[network-wireless-ap-basic, Basic Settings] for more details.
 It is possible to see the stations associated with the AP using `ifconfig _wlan0_ list sta`.
 
 [[network-usb-tethering]]
