--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -310,7 +310,7 @@ The following options are available.
 * `Cons`: Allow to continue the installation by `video`, `serial`, `Dual (serial primary)` or `Dual (Video primary)`
 * `Kernel`: Loads a different kernel.
 * `Boot Options`: Opens the menu shown in, and described under,
-  crossref:bsdinstall[bsdinstall-boot-options-menu,.FreeBSD Boot Options Menu].
+  crossref:bsdinstall[bsdinstall-boot-options-menu,FreeBSD Boot Options Menu].
 
 [[bsdinstall-boot-options-menu]]
 .FreeBSD Boot Options Menu
@@ -331,7 +331,7 @@ Several options can be toggled using this menu:
 After making the needed selections, press kbd:[1] or kbd:[Backspace] to return to the main boot menu, then press kbd:[Enter] to continue booting into FreeBSD.
 A series of boot messages will appear as FreeBSD carries out its hardware device probes and loads the installation program.
 Once the boot is complete, the welcome menu shown in
-crossref:bsdinstall[bsdinstall-choose-mode,.Welcome Menu] will be displayed.
+crossref:bsdinstall[bsdinstall-choose-mode,Welcome Menu] will be displayed.
 
 [[bsdinstall-choose-mode]]
 .Welcome Menu
@@ -362,14 +362,14 @@ When finished, press kbd:[Enter] to save the selection and move onto the next sc
 === Selecting the Keymap Menu
 
 Before starting the process, bsdinstall will load the keymap files as shown in
-crossref:bsdinstall[bsdinstall-keymap-loading,.Keymap Loading].
+crossref:bsdinstall[bsdinstall-keymap-loading,Keymap Loading].
 
 [[bsdinstall-keymap-loading]]
 .Keymap Loading
 image::bsdinstall-keymap-loading.png[Keymap loading]
 
 After the keymaps have been loaded, bsdinstall displays the menu shown in
-crossref:bsdinstall[bsdinstall-keymap-10,.Keymap Selection Menu].
+crossref:bsdinstall[bsdinstall-keymap-10,Keymap Selection Menu].
 Use the up and down arrows to select the keymap that most closely represents the mapping of the keyboard attached to the system.
 Press kbd:[Enter] to save the selection.
 
@@ -385,7 +385,7 @@ If the choice of keymap is not clear, [.guimenuitem]#United States of America IS
 
 In addition, when selecting a different keymap, the user can try the keymap and
 ensure it is correct before proceeding, as shown in
-crossref:bsdinstall[bsdinstall-keymap-testing,.Keymap Testing Menu].
+crossref:bsdinstall[bsdinstall-keymap-testing,Keymap Testing Menu].
 
 [[bsdinstall-keymap-testing]]
 .Keymap Testing Menu
@@ -435,7 +435,7 @@ The FreeBSD Ports Collection takes up about {ports-size} of disk space.
 [[bsdinstall-netinstall]]
 === Installing from the Network
 
-The menu shown in crossref:bsdinstall[bsdinstall-netinstall-notify,.Installing from the Network] only appears when installing from a `-bootonly.iso` or `-mini-memstick.img`, as this installation media does not hold copies of the installation files.
+The menu shown in crossref:bsdinstall[bsdinstall-netinstall-notify,Installing from the Network] only appears when installing from a `-bootonly.iso` or `-mini-memstick.img`, as this installation media does not hold copies of the installation files.
 Since the installation files must be retrieved over a network connection, this menu indicates that the network interface must be configured first.
 If this menu is shown in any step of the process, remember to follow the
 instructions in crossref:bsdinstall[bsdinstall-config-network-dev, Configuring Network Interfaces].
@@ -536,7 +536,7 @@ The next menu shows a list with the available partition scheme types.
 GPT is usually the most appropriate choice for amd64 computers.
 Older computers that are not compatible with GPT should use MBR.
 The other partition schemes are generally used for uncommon or older computers.
-More information is available in crossref:bsdinstall[partition-schemes,.Partitioning Schemes].
+More information is available in crossref:bsdinstall[partition-schemes,Partitioning Schemes].
 
 [[bsdinstall-ufs-scheme]]
 .Select Partition Scheme
@@ -625,7 +625,7 @@ Multiple file system partitions can be created. Some people prefer a traditional
 Note that `/tmp` can be added later as a memory-based file system (man:tmpfs[5]) on systems with sufficient memory.
 ====
 
-See crossref:bsdinstall[bsdinstall-part-manual-splitfs,.Creating Traditional Split File System Partitions] for an example.
+See crossref:bsdinstall[bsdinstall-part-manual-splitfs,Creating Traditional Split File System Partitions] for an example.
 
 The `Size` may be entered with common abbreviations: _K_ for kilobytes, _M_ for megabytes, or _G_ for gigabytes.
 
@@ -870,7 +870,7 @@ Select the interface to configure.
 image::bsdinstall-configure-network-interface.png[Menu showing the different network interfaces to configure.]
 
 If an Ethernet interface is selected, the installer will skip ahead to the menu
-shown in crossref:bsdinstall[bsdinstall-configure-net-ipv4,.Choose IPv4 Networking].
+shown in crossref:bsdinstall[bsdinstall-configure-net-ipv4,Choose IPv4 Networking].
 If a wireless network interface is chosen, the system will instead scan for wireless access points:
 
 [[bsdinstall-wireless-scan]]
@@ -1088,7 +1088,7 @@ Select btn:[Yes] to add new users.
 image::bsdinstall-adduser1.png[Menu requesting if a user want to be added to the system.]
 
 Follow the prompts and input the requested information for the user account.
-The example shown in crossref:bsdinstall[bsdinstall-add-user2,.Enter User Information] creates the `asample` user account.
+The example shown in crossref:bsdinstall[bsdinstall-add-user2,Enter User Information] creates the `asample` user account.
 
 [[bsdinstall-add-user2]]
 .Enter User Information
@@ -1175,7 +1175,7 @@ When finished, press kbd:[Scroll-Lock] again to unlock the display and return to
 To review these messages once the system has been up for some time, type `less /var/run/dmesg.boot` from a command prompt.
 Press kbd:[q] to return to the command line after viewing.
 
-If sshd was enabled in crossref:bsdinstall[bsdinstall-config-serv,.Selecting Additional Services to Enable], the first boot might be a bit slower as the system generates SSH host keys.
+If sshd was enabled in crossref:bsdinstall[bsdinstall-config-serv,Selecting Additional Services to Enable], the first boot might be a bit slower as the system generates SSH host keys.
 Subsequent boots will be faster.
 The fingerprints of the keys are then displayed as in the following example:
 
@@ -1261,7 +1261,7 @@ More information about the boot loader can be found in crossref:boot[boot-synops
 == Using the Live CD
 
 The welcome menu of bsdinstall, shown in
-crossref:bsdinstall[bsdinstall-choose-mode,.Welcome Menu], provides a btn:[Live CD] option.
+crossref:bsdinstall[bsdinstall-choose-mode,Welcome Menu], provides a btn:[Live CD] option.
 This is useful for those who are still wondering whether FreeBSD is the right operating system for them and want to test some of the features before installing.
 
 The following points should be noted before using the btn:[Live CD]:
