--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -74,7 +74,7 @@ FreeBSD base system configuration is located at the [.filename]#/etc# directory,
 and the [.filename]#/usr/local/etc# directory contains all the configuration files of the applications installed on the system through the ports collection and packages.
 
 The kernel state configuration is located in [.filename]#/etc/sysctl.conf#.
-In the section crossref:config[configtuning-sysctl], the operation of man:sysctl[8] will be explained in more detail.
+In the section crossref:config[configtuning-sysctl, The sysctl utility], the operation of man:sysctl[8] will be explained in more detail.
 
 For more information about the FreeBSD file system structure refer to man:hier[7].
 
