--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -834,7 +834,7 @@ Determine which version of FreeBSD is being used with man:uname[1]:
 13.2-RELEASE
 ....
 
-Based on crossref:cutting-edge[updating-src-obtaining-src-repopath,.FreeBSD Versions and Repository Branches], the source used to update `13.2-RELEASE` has a repository path of `releng/13.2`.
+Based on crossref:cutting-edge[updating-src-obtaining-src-repopath,FreeBSD Versions and Repository Branches], the source used to update `13.2-RELEASE` has a repository path of `releng/13.2`.
 That path is used when checking out the source:
 
 [source,shell]
@@ -845,7 +845,7 @@ That path is used when checking out the source:
 
 <.> Move the old directory out of the way. If there are no local modifications in this directory, it can be deleted.
 
-<.> The path from crossref:cutting-edge[updating-src-obtaining-src-repopath,.FreeBSD Versions and Repository Branches] is added to the repository URL. The third parameter is the destination directory for the source code on the local system.
+<.> The path from crossref:cutting-edge[updating-src-obtaining-src-repopath,FreeBSD Versions and Repository Branches] is added to the repository URL. The third parameter is the destination directory for the source code on the local system.
 
 [[updating-src-building]]
 === Building from Source
