--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -773,7 +773,7 @@ In order to mount a data CD, the data must be written using `mkisofs`.
 
 To duplicate an audio CD, extract the audio data from the CD to a series of files, then write these files to a blank CD.
 
-crossref:disks[using-cdrecord] describes how to duplicate and burn an audio CD.
+crossref:disks[using-cdrecord, Duplicating an Audio CD] describes how to duplicate and burn an audio CD.
 If the FreeBSD version is less than 10.0 and the device is ATAPI, the `atapicam`
 module must be first loaded using the instructions in crossref:disks[atapicam, Supported Devices].
 
