--- a/documentation/content/en/books/handbook/firewalls/_index.adoc
+++ b/documentation/content/en/books/handbook/firewalls/_index.adoc
@@ -245,7 +245,7 @@ The FreeBSD installation includes several sample files located in [.filename]#/u
 Refer to the http://www.openbsd.org/faq/pf/[PF FAQ] for complete coverage of PF rulesets.
 
 To control PF, use `pfctl`.
-crossref:firewalls[pfctl,.Useful `pfctl` Options] summarizes some useful options to this command.
+crossref:firewalls[pfctl,Useful `pfctl` Options] summarizes some useful options to this command.
 Refer to man:pfctl[8] for a description of all available options:
 [[pfctl]]
 .Useful `pfctl` Options
