--- a/documentation/content/en/books/handbook/serialcomms/_index.adoc
+++ b/documentation/content/en/books/handbook/serialcomms/_index.adoc
@@ -103,7 +103,7 @@ The documentation for the hardware should describe the type of cable required.
 
 These two types of cables differ in how the wires are connected to the connector.
 Each wire represents a signal, with the defined signals summarized in
-crossref:serialcomms[serialcomms-signal-names,.RS-232C Signal Names].
+crossref:serialcomms[serialcomms-signal-names,RS-232C Signal Names].
 A standard serial cable passes all of the RS-232C signals straight through.
 For example, the "Transmitted Data" pin on one end of the cable goes to the "Transmitted Data" pin on the other end.
 This is the type of cable used to connect a modem to the FreeBSD system, and is also appropriate for some terminals.
@@ -112,8 +112,8 @@ A null-modem cable switches the "Transmitted Data" pin of the connector on one e
 The connector can be either a DB-25 or a DB-9.
 
 A null-modem cable can be constructed using the pin connections summarized in
-crossref:serialcomms[nullmodem-db25], crossref:serialcomms[nullmodem-db9], and
-crossref:serialcomms[nullmodem-db9-25,.DB-9 to DB-25 Null-Modem Cable].
+crossref:serialcomms[nullmodem-db25, DB-25 to DB-25 Null-Modem Cable], crossref:serialcomms[nullmodem-db9,DB-9 to DB-9 Null-Modem Cable], and
+crossref:serialcomms[nullmodem-db9-25,DB-9 to DB-25 Null-Modem Cable, DB-9 to DB-25 Null-Modem Cable].
 While the standard calls for a straight-through pin 1 to pin 1 "Protective Ground" line, it is often omitted.
 Some terminals work using only pins 2, 3, and 7, while others require different configurations.
 When in doubt, refer to the documentation for the hardware.
@@ -502,7 +502,7 @@ ttyu3   "/usr/libexec/getty std.115200"   dialup  off secure
 When attaching a terminal to one of those ports, modify the default entry to set the required speed and terminal type, to turn the device `on` and, if needed, to change the port's `secure` setting.
 If the terminal is connected to another port, add an entry for the port.
 
-crossref:serialcomms[ex-etc-ttys,.Configuring Terminal Entries] configures two terminals in [.filename]#/etc/ttys#.
+crossref:serialcomms[ex-etc-ttys,Configuring Terminal Entries] configures two terminals in [.filename]#/etc/ttys#.
 The first entry configures a Wyse-50 connected to [.filename]#COM2#.
 The second entry configures an old computer running Procomm terminal software emulating a VT-100 terminal.
 The computer is connected to the sixth serial port on a multi-port serial card.
@@ -693,7 +693,7 @@ vq|VH57600|Very High Speed Modem at 57600,8-bit:\
 For a slow CPU or a heavily loaded system without 16550A-based serial ports, this configuration may produce `uart` "silo" errors at 57.6 Kbps.
 
 The configuration of [.filename]#/etc/ttys# is similar to
-crossref:serialcomms[ex-etc-ttys,.Configuring Terminal Entries], but a different argument is passed to `getty` and `dialup` is used for the terminal type.
+crossref:serialcomms[ex-etc-ttys,Configuring Terminal Entries], but a different argument is passed to `getty` and `dialup` is used for the terminal type.
 Replace _xxx_ with the process `init` will run on the device:
 
 [.programlisting]
