--- a/documentation/content/en/books/porters-handbook/flavors/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/flavors/_index.adoc
@@ -120,7 +120,7 @@ nox11_PKGNAMESUFFIX=	-nox11
 [example]
 ====
 Here is a slightly edited excerpt of what is present in package:devel/libpeas[],
-a port that uses the crosref:flavors[flavors-auto-python,Python flavors].
+a port that uses the crossref:flavors[flavors-auto-python,Python flavors].
 With the default Python 2 and 3 versions being 2.7 and 3.6, it will automatically get `FLAVORS=py27 py36`
 
 [.programlisting]
@@ -157,7 +157,7 @@ The `configure` script has to run in [.filename]#${WRKSRC}#, but we are only int
 Hint about the correct Python 3 config script path name.
 The packing list is different when the built with Python 3. As there are three
 possible Python 3 versions, set `PLIST` for all three using the
-crosref:flavors[flavors-using-helpers,helper].
+crossref:flavors[flavors-using-helpers,helper].
 ====
 
 [[flavors-using-helpers]]
