--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -101,7 +101,7 @@ From time to time, some software will use a version scheme that is not compatibl
 [TIP]
 ====
 When updating a port, it is possible to use man:pkg-version[8]'s `-t` argument to check if the new version is greater or lesser than before.
-See crossref:makefiles[makefile-versions-ex-pkg-version].
+See crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions].
 ====
 
 [[makefile-versions-ex-pkg-version]]
@@ -1577,7 +1577,7 @@ GH_TAGNAME=	c472d66b
 ....
 
 This creates a versioning scheme that increases over time, and that is still
-before version `0` (see crossref:makefiles[makefile-versions-ex-pkg-version] for details on man:pkg-version[8]):
+before version `0` (see crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions] for details on man:pkg-version[8]):
 
 [source,shell]
 ....
@@ -1622,7 +1622,7 @@ USE_GITHUB=	yes
 ....
 
 This creates a versioning scheme that increases over time (well, over commits), and does not conflict with the creation of a `0.7.4` version.
-(See crossref:makefiles[makefile-versions-ex-pkg-version] for details on man:pkg-version[8]):
+(See crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions] for details on man:pkg-version[8]):
 
 [source,shell]
 ....
@@ -1660,7 +1660,7 @@ Multiple values are added to `GH_ACCOUNT`, `GH_PROJECT`, and `GH_TAGNAME`.
 Each different value is assigned a group.
 The main value can either have no group, or the `:DEFAULT` group.
 A value can be omitted if it is the same as the default as listed in
-crossref:makefiles[makefile-master_sites-github-description,.`USE_GITHUB` Description].
+crossref:makefiles[makefile-master_sites-github-description,`USE_GITHUB` Description].
 
 `GH_TUPLE` can also be used when there are a lot of distribution files.
 It helps keep the account, project, tagname, and group information at the same place.
@@ -1752,7 +1752,7 @@ post-extract:
 ====
 
 This is functionally equivalent to
-crossref:makefiles[makefile-master_sites-github-multi,.Use of `USE_GITHUB` with Multiple Distribution Files], but using `GH_TUPLE`:
+crossref:makefiles[makefile-master_sites-github-multi,Use of `USE_GITHUB` with Multiple Distribution Files], but using `GH_TUPLE`:
 
 [.programlisting]
 ....
@@ -1964,7 +1964,7 @@ crossref:makefiles[makefile-master_sites-gitlab-multiple, Fetching Multiple File
 
 Multiple values are added to `GL_SITE`, `GL_ACCOUNT`, `GL_PROJECT` and `GL_COMMIT`.
 Each different value is assigned a group.
-crossref:makefiles[makefile-master_sites-gitlab-description,.`USE_GITLAB` Description].
+crossref:makefiles[makefile-master_sites-gitlab-description,`USE_GITLAB` Description].
 
 `GL_TUPLE` can also be used when there are a lot of distribution files.
 It helps keep the site, account, project, commit, and group information at the same place.
@@ -2058,7 +2058,7 @@ post-extract:
 [example]
 ====
 This is functionally equivalent to
-crossref:makefiles[makefile-master_sites-gitlab-multi,.Use of `USE_GITLAB` with Multiple Distribution Files], but using `GL_TUPLE`:
+crossref:makefiles[makefile-master_sites-gitlab-multi,Use of `USE_GITLAB` with Multiple Distribution Files], but using `GL_TUPLE`:
 
 [.programlisting]
 ....
@@ -2227,7 +2227,7 @@ Each site listed in `MASTER_SITES` is then followed by a colon, and the group th
 
 For example, consider an application with the source split in two parts, [.filename]#source1.tar.gz# and [.filename]#source2.tar.gz#, which must be downloaded from two different sites.
 The port's [.filename]#Makefile# would include lines like
-crossref:makefiles[ports-master-sites-n-example-simple-use-one-file-per-site,.Simplified Use of `MASTER_SITES:n` with One File Per Site].
+crossref:makefiles[ports-master-sites-n-example-simple-use-one-file-per-site,Simplified Use of `MASTER_SITES:n` with One File Per Site].
 
 [[ports-master-sites-n-example-simple-use-one-file-per-site]]
 .Simplified Use of `MASTER_SITES:n` with One File Per Site
@@ -2247,7 +2247,7 @@ DISTFILES=	source1.tar.gz:source1 \
 Multiple distribution files can have the same group.
 Continuing the previous example, suppose that there was a third distfile, [.filename]#source3.tar.gz#, that is downloaded from `ftp.example2.com`.
 The [.filename]#Makefile# would then be written like
-crossref:makefiles[ports-master-sites-n-example-simple-use-more-than-one-file-per-site,.Simplified Use of `MASTER_SITES:n` with More Than One File Per Site].
+crossref:makefiles[ports-master-sites-n-example-simple-use-more-than-one-file-per-site,Simplified Use of `MASTER_SITES:n` with More Than One File Per Site].
 
 [[ports-master-sites-n-example-simple-use-more-than-one-file-per-site]]
 .Simplified Use of `MASTER_SITES:n` with More Than One File Per Site
@@ -2344,9 +2344,9 @@ MASTER_SITES=	alpha:DEFAULT,SOME_SITE
    elements, if the postfix immediate preceding character is not a `/` then `:n`
    will be considered a valid part of the element instead of a group postfix
    even if an element is postfixed with `:n`. See both
-   crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-subdir,.Detailed Use of `MASTER_SITES:n` in `MASTER_SITE_SUBDIR`]
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-subdir,Detailed Use of `MASTER_SITES:n` in `MASTER_SITE_SUBDIR`]
    and
-   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites,.Detailed Use of `MASTER_SITES:n` with Comma Operator, Multiple Files, Multiple Sites and Multiple Subdirectories].
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites,Detailed Use of `MASTER_SITES:n` with Comma Operator, Multiple Files, Multiple Sites and Multiple Subdirectories].
 +
 [[ports-master-sites-n-example-detailed-use-master-site-subdir]]
 .Detailed Use of `MASTER_SITES:n` in `MASTER_SITE_SUBDIR`
@@ -2440,7 +2440,7 @@ Sites are listed in the exact order they will be used.
 +
 This has been simplified as much as possible.
 See
-crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-sourceforge,.Detailed Use of `MASTER_SITES:n` with SourceForge (`SF`)].
+crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-sourceforge,Detailed Use of `MASTER_SITES:n` with SourceForge (`SF`)].
 +
 [[ports-master-sites-n-example-detailed-use-master-site-sourceforge]]
 .Detailed Use of `MASTER_SITES:n` with SourceForge (`SF`)
@@ -2459,7 +2459,7 @@ DISTFILES=	something.tar.gz:sourceforge
 +
 All examples were done with `MASTER*` but they work exactly the same for
 `PATCH*` ones as can be seen in
-crossref:makefiles[ports-master-sites-n-example-detailed-use-patch-sites,.Simplified Use of `MASTER_SITES:n` with `PATCH_SITES`].
+crossref:makefiles[ports-master-sites-n-example-detailed-use-patch-sites,Simplified Use of `MASTER_SITES:n` with `PATCH_SITES`].
 +
 [[ports-master-sites-n-example-detailed-use-patch-sites]]
 .Simplified Use of `MASTER_SITES:n` with `PATCH_SITES`
@@ -2490,7 +2490,7 @@ PATCHFILES=	patch1:test
    with their matching group elements within both `MASTER_SITES` and
    `PATCH_SITES` which use matching group elements within both
    `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR`. Check
-   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites,.Detailed Use of `MASTER_SITES:n` with Comma Operator, Multiple Files, Multiple Sites and Multiple Subdirectories].
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites,Detailed Use of `MASTER_SITES:n` with Comma Operator, Multiple Files, Multiple Sites and Multiple Subdirectories].
 ** `fetch-list`: works like old `fetch-list` with the exception that it groups just like `do-fetch`.
 ** `master-sites` and `patch-sites`: (incompatible with older versions) only return the elements of group `DEFAULT`; in fact, they execute targets `master-sites-default` and `patch-sites-default` respectively.
 +
@@ -2622,13 +2622,13 @@ If it is not an OSI approved license it must also document any restrictions on r
 
 A short name for the license or licenses if more than one license apply.
 
-If it is one of the licenses listed in crossref:makefiles[licenses-license-list,.Predefined License List], only `LICENSE_FILE` and `LICENSE_DISTFILES` variables can be set.
+If it is one of the licenses listed in crossref:makefiles[licenses-license-list,Predefined License List], only `LICENSE_FILE` and `LICENSE_DISTFILES` variables can be set.
 
 If this is a license that has not been defined in the ports framework (see
-crossref:makefiles[licenses-license-list,.Predefined License List]), the `LICENSE_PERMS` and `LICENSE_NAME` must be set, along with either `LICENSE_FILE` or `LICENSE_TEXT`.
+crossref:makefiles[licenses-license-list,Predefined License List]), the `LICENSE_PERMS` and `LICENSE_NAME` must be set, along with either `LICENSE_FILE` or `LICENSE_TEXT`.
 `LICENSE_DISTFILES` and `LICENSE_GROUPS` can also be set, but are not required.
 
-The predefined licenses are shown in crossref:makefiles[licenses-license-list,.Predefined License List].
+The predefined licenses are shown in crossref:makefiles[licenses-license-list,Predefined License List].
 The current list is always available in [.filename]#Mk/bsd.licenses.db.mk#.
 
 [[licenses-license-ex1]]
@@ -5305,7 +5305,7 @@ post-install:
 These macros do not add the installed files to [.filename]#pkg-plist#.
 They must be added manually.
 For optional documentation (`PORTDOCS`, see
-crossref:makefiles[install-documentation]) and examples (`PORTEXAMPLES`), the `%%PORTDOCS%%` or `%%PORTEXAMPLES%%` prefixes must be prepended in [.filename]#pkg-plist#.
+crossref:makefiles[install-documentation, Install Additional Documentation]) and examples (`PORTEXAMPLES`), the `%%PORTDOCS%%` or `%%PORTEXAMPLES%%` prefixes must be prepended in [.filename]#pkg-plist#.
 
 [[install-documentation]]
 === Install Additional Documentation
