--- a/documentation/content/en/books/porters-handbook/pkg-files/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/pkg-files/_index.adoc
@@ -149,7 +149,7 @@ The message is delimited by double quotes `"`, this is used for simple single li
 Multiline strings use the standard here document notation.
 The multiline delimiter _must_ start just after `<<` symbols without any whitespace and it _must_ consist of capital letters only.
 To finish a multiline string, add the delimiter string on a line of its own without any whitespace.
-The message from crossref:pkg-files[porting-message-ucl-short-ex,.UCL Short Strings] can be written as:
+The message from crossref:pkg-files[porting-message-ucl-short-ex,UCL Short Strings] can be written as:
 
 [.programlisting]
 ....
