--- a/documentation/content/en/books/porters-handbook/plist/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/plist/_index.adoc
@@ -159,7 +159,7 @@ If the port installs configuration files to [.filename]#PREFIX/etc# (or elsewher
 That will cause `pkg delete` to remove files that have been carefully edited by the user, and a re-installation will wipe them out.
 
 Instead, install sample files with a [.filename]#filename.sample# extension.
-The `@sample` macro automates this, see crossref:plist[plist-keywords-sample] for what it does exactly.
+The `@sample` macro automates this, see crossref:plist[plist-keywords-sample, Expanding Package List with Keywords] for what it does exactly.
 For each sample file, add a line to [.filename]#pkg-plist#:
 
 [.programlisting]
@@ -399,7 +399,7 @@ On deinstallation, remove it from [.filename]#/etc/shells#.
 === `@terminfo`
 
 Do not use by itself.
-If the port installs [.filename]#*.terminfo# files, add crossref:uses[uses-terminfo,USES=terminfo] to its [.filename]#Makefile#.
+If the port installs [.filename]#*.terminfo# files, add crossref:uses[uses-terminfo,`USES=terminfo`] to its [.filename]#Makefile#.
 
 On installation and deinstallation, if `tic` is present, refresh [.filename]#${PREFIX}/shared/misc/terminfo.db# from the [.filename]#*.terminfo# files in [.filename]#${PREFIX}/shared/misc#.
 
