--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -421,11 +421,11 @@ For ports that use CMake, define `USES= cmake`.
 
 |`CMAKE_ON`
 |For each entry in `CMAKE_ON`, an enabled boolean value is added to
-`CMAKE_ARGS`. See crossref:special[using-cmake-example2,.`CMAKE_ON` and `CMAKE_OFF`].
+`CMAKE_ARGS`. See crossref:special[using-cmake-example2,`CMAKE_ON` and `CMAKE_OFF`].
 
 |`CMAKE_OFF`
 |For each entry in `CMAKE_OFF`, a disabled boolean value is added to
-`CMAKE_ARGS`. See crossref:special[using-cmake-example2,.`CMAKE_ON` and `CMAKE_OFF`].
+`CMAKE_ARGS`. See crossref:special[using-cmake-example2,`CMAKE_ON` and `CMAKE_OFF`].
 
 |`CMAKE_BUILD_TYPE`
 |Type of build (CMake predefined build profiles). Default is `Release`, or `Debug` if `WITH_DEBUG` is set.
@@ -2438,7 +2438,7 @@ If the application provides a qmake project file ([.filename]#*.pro#), define `U
 Similar to crossref:special[using-cmake,CMake], qmake supports out-of-source
 builds, which can be enabled by specifying the `outsource` argument (see
 crossref:special[using-qmake-example,`USES= qmake` example]).
-Also see crossref:special[using-qmake-arguments,.Possible Arguments for `USES qmake`].
+Also see crossref:special[using-qmake-arguments,Possible Arguments for `USES qmake`].
 
 [[using-qmake-arguments]]
 .Possible Arguments for `USES= qmake`
@@ -3624,7 +3624,7 @@ A complete list of available variables can be found in [.filename]#/usr/ports/Mk
 [IMPORTANT]
 ====
 All dependencies to Python ports using crossref:flavors[flavors-auto-python,Python flavors] (either with `USE_PYTHON=distutils` or `USE_PYTHON=flavors`) must have the Python flavor appended to their origin using `@${PY_FLAVOR}`.
-See crossref:special[python-Makefile,.Makefile for a Simple Python Module].
+See crossref:special[python-Makefile,Makefile for a Simple Python Module].
 ====
 
 [[python-Makefile]]
@@ -3808,7 +3808,7 @@ The available wxWidgets versions and the corresponding ports in the tree are:
 |package:x11-toolkits/wxgtk30[]
 |===
 
-The variables in crossref:special[wx-ver-sel-table,.Variables to Select wxWidgets Versions] can be set to one or more of these combinations separated by spaces:
+The variables in crossref:special[wx-ver-sel-table,Variables to Select wxWidgets Versions] can be set to one or more of these combinations separated by spaces:
 
 [[wx-widgets-versions-specification]]
 .wxWidgets Version Specifications
@@ -3874,7 +3874,7 @@ These applications can be specified in `WX_COMPS`. These components are availabl
 |===
 
 The dependency type can be selected for each component by adding a suffix separated by a semicolon.
-If not present then a default type will be used (see crossref:special[wx-def-dep-types,.Default wxWidgets Dependency Types]).
+If not present then a default type will be used (see crossref:special[wx-def-dep-types,Default wxWidgets Dependency Types]).
 These types are available:
 
 [[wx-widgets-dependency-table]]
@@ -3979,7 +3979,7 @@ CONFIGURE_ARGS+=	--enable-wxpython
 [[wx-defined-variables]]
 === Defined Variables
 
-These variables are available in the port (after defining one from crossref:special[wx-ver-sel-table,.Variables to Select wxWidgets Versions]).
+These variables are available in the port (after defining one from crossref:special[wx-ver-sel-table,Variables to Select wxWidgets Versions]).
 
 [[wx-widgets-variables]]
 .Variables Defined for Ports That Use wxWidgets
@@ -4757,7 +4757,7 @@ USE_BUDGIE=	libbudgie
 [[using-databases]]
 == Using Databases
 
-Use one of the `USES` macros from crossref:special[using-databases-uses,.Database `USES` Macros] to add a dependency on a database.
+Use one of the `USES` macros from crossref:special[using-databases-uses,Database `USES` Macros] to add a dependency on a database.
 
 [[using-databases-uses]]
 .Database `USES` Macros
