--- a/documentation/content/pt-br/books/fdp-primer/editor-config/_index.adoc
+++ b/documentation/content/pt-br/books/fdp-primer/editor-config/_index.adoc
@@ -52,7 +52,7 @@ Ajustar a configuração do editor de texto pode tornar o trabalho nos arquivos 
 [[editor-config-vim]]
 == Vim
 
-Instale o package:editors/vim[] e em seguida siga as instruções em crossref:editor-config[editor-config-vim-config]. Usuários mais avançados podem usar um linter mais adequado como o link:https://github.com/dense-analysis/ale[Ale] que também pode atuar como um link:https://langserver.org/[Protocolo de Servidor de Idiomas] do Vim.
+Instale o package:editors/vim[] e em seguida siga as instruções em crossref:editor-config[editor-config-vim-config, Uso]. Usuários mais avançados podem usar um linter mais adequado como o link:https://github.com/dense-analysis/ale[Ale] que também pode atuar como um link:https://langserver.org/[Protocolo de Servidor de Idiomas] do Vim.
 
 [[editor-config-vim-use]]
 === Uso
