--- a/documentation/content/zh-cn/books/handbook/users/_index.adoc
+++ b/documentation/content/zh-cn/books/handbook/users/_index.adoc
@@ -311,7 +311,7 @@ Other information:
 
 [NOTE]
 ====
-man:chfn[1] 和 man:chsh[1] 只是到 man:chpass[1] 的符号连接， 类似地， man:ypchpass[1], man:ypchfn[1] 以及 man:ypchsh[1] 也是这样。 NIS 是自动支持的， 不一定要在命令前指定 `yp`。 如果这让您有点不太明白， 不必担心， NIS 将在 crossref:network-servers[network-servers,] 介绍。
+man:chfn[1] 和 man:chsh[1] 只是到 man:chpass[1] 的符号连接， 类似地， man:ypchpass[1], man:ypchfn[1] 以及 man:ypchsh[1] 也是这样。 NIS 是自动支持的， 不一定要在命令前指定 `yp`。 如果这让您有点不太明白， 不必担心， NIS 将在 crossref:network-servers[network-servers,"?"] 介绍。
 ====
 
 [[users-passwd]]
