--- a/documentation/content/zh-tw/books/porters-handbook/plist/_index.adoc
+++ b/documentation/content/zh-tw/books/porters-handbook/plist/_index.adoc
@@ -409,7 +409,7 @@ On deinstallation, remove it from [.filename]#/etc/shells#.
 === `@terminfo`
 
 Do not use by itself.
-If the port installs [.filename]#*.terminfo# files, add crossref:uses[uses-terminfo,USES=terminfo] to its [.filename]#Makefile#.
+If the port installs [.filename]#*.terminfo# files, add crossref:uses[uses-terminfo,`USES=terminfo`] to its [.filename]#Makefile#.
 
 On installation and deinstallation, if `tic` is present, refresh [.filename]#${PREFIX}/shared/misc/terminfo.db# from the [.filename]#*.terminfo# files in [.filename]#${PREFIX}/shared/misc#.
 
