--- a/documentation/content/en/books/handbook/audit/_index.adoc
+++ b/documentation/content/en/books/handbook/audit/_index.adoc
@@ -126,7 +126,7 @@ Selection expressions are used in a number of places in the audit configuration 
 Expressions contain a list of event classes to match.
 Selection expressions are evaluated from left to right, and two expressions are combined by appending one onto the other.
 
-crossref:audit[event-selection,.Default Audit Event Classes] summarizes the default audit event classes:
+crossref:audit[event-selection,Default Audit Event Classes] summarizes the default audit event classes:
 
 [[event-selection]]
 .Default Audit Event Classes
@@ -220,7 +220,7 @@ crossref:audit[event-selection,.Default Audit Event Classes] summarizes the defa
 These audit event classes may be customized by modifying the [.filename]#audit_class# and [.filename]#audit_event# configuration files.
 
 Each audit event class may be combined with a prefix indicating whether successful/failed operations are matched, and whether the entry is adding or removing matching for the class and type.
-crossref:audit[event-prefixes,.Prefixes for Audit Event Classes] summarizes the available prefixes:
+crossref:audit[event-prefixes,Prefixes for Audit Event Classes] summarizes the available prefixes:
 
 [[event-prefixes]]
 .Prefixes for Audit Event Classes
@@ -437,7 +437,7 @@ The change will take effect once [.filename]#/etc/crontab# is saved.
 
 Automatic rotation of the audit trail file based on file size is possible using
 `filesz` in [.filename]#audit_control# as described in
-crossref:audit[audit-auditcontrol].
+crossref:audit[audit-auditcontrol, The audit_control File].
 
 As audit trail files can become very large, it is often desirable to compress or otherwise archive trails once they have been closed by the audit daemon.
 The [.filename]#audit_warn# script can be used to perform customized operations for a variety of audit-related events, including the clean termination of audit trails when they are rotated.
