--- a/documentation/content/en/books/handbook/basics/_index.adoc
+++ b/documentation/content/en/books/handbook/basics/_index.adoc
@@ -345,7 +345,7 @@ This software provides activity logging and allows the administrator to configur
 
 FreeBSD provides a variety of different commands to manage user accounts.
 The most common commands are summarized in
-crossref:basics[users-modifying-utilities,.Utilities for Managing User Accounts], followed by some examples of their usage.
+crossref:basics[users-modifying-utilities,Utilities for Managing User Accounts], followed by some examples of their usage.
 See the manual page for each utility for more details and usage examples.
 
 [[users-modifying-utilities]]
@@ -383,7 +383,7 @@ It also creates a home directory for the new user, copies in the default configu
 This utility must be run as the superuser.
 
 The man:adduser[8] utility is interactive and walks through the steps for creating a new user account.
-As seen in crossref:basics[users-modifying-adduser], either input the required information or press kbd:[Return] to accept the default value shown in square brackets.
+As seen in crossref:basics[users-modifying-adduser, Adding a User on FreeBSD], either input the required information or press kbd:[Return] to accept the default value shown in square brackets.
 In this example, the user has been invited into the `wheel` group, allowing them to become the superuser with man:su[1].
 When finished, the utility will prompt to either create another user or to exit.
 
@@ -494,9 +494,9 @@ When the user exits from the editor, the user database is updated with the new i
 This utility will prompt for the user's password when exiting the editor, unless the utility is run as the superuser.
 ====
 
-In crossref:basics[users-modifying-chpass-su,.Using `chpass` as Superuser], the superuser has typed `chpass jru` and is now viewing the fields that can be changed for this user.
+In crossref:basics[users-modifying-chpass-su,Using `chpass` as Superuser], the superuser has typed `chpass jru` and is now viewing the fields that can be changed for this user.
 If `jru` runs this command instead, only the last six fields will be displayed and available for editing.
-This is shown in crossref:basics[users-modifying-chpass-ru,.Using `chpass` as Regular User].
+This is shown in crossref:basics[users-modifying-chpass-ru,Using `chpass` as Regular User].
 
 [[users-modifying-chpass-su]]
 .Using `chpass` as Superuser
@@ -1271,7 +1271,7 @@ If the partition is the last one on a virtual disk, and the disk is expanded, th
 
 File systems are contained in _partitions_.
 Disks are divided into partitions using one of several partitioning schemes;
-see crossref:basics[bsdinstall-part-manual].
+see crossref:bsdinstall[bsdinstall-part-manual, Manual Partitioning].
 The newer scheme is GPT; older BIOS-based computers use MBR.
 GPT supports division of a disk into partitions with a size, offset, and type.
 It supports a large number of partitions and partition types, and is recommended whenever its use is possible.
@@ -1321,13 +1321,13 @@ This letter is appended to the device name, so "da0__a__" is the `a` partition o
 Finally, each disk on the system is identified.
 A disk name starts with a code that indicates the type of disk, and then a number, indicating which disk it is.
 Unlike partitions and slices, disk numbering starts at 0.
-Common codes are listed in crossref:basics[disks-naming,.Disk Device Names].
+Common codes are listed in crossref:basics[disks-naming,Disk Device Names].
 
 When referring to a partition in a slice, include the disk name, `s`, the slice number, and then the partition letter.
-Examples are shown in crossref:basics[basics-disk-slice-part,.Sample Disk, Slice, and Partition Names].
+Examples are shown in crossref:basics[basics-disk-slice-part,Sample Disk, Slice, and Partition Names].
 GPT partitions include the disk name, `p`, and then the partition number.
 
-crossref:basics[basics-concept-disk-model,.Conceptual Model of a Disk] shows a conceptual model of a disk layout using MBR slices.
+crossref:basics[basics-concept-disk-model,Conceptual Model of a Disk] shows a conceptual model of a disk layout using MBR slices.
 
 When installing FreeBSD, configure the disk slices if using MBR, and create partitions within the slice to be used for FreeBSD.
 If using GPT, configure partitions for each file system.
@@ -1423,7 +1423,7 @@ device       /mount-point fstype     options      dumpfreq     passno
 ....
 
 `device`::
-An existing device name as explained in crossref:basics[disks-naming,.Disk Device Names].
+An existing device name as explained in crossref:basics[disks-naming,Disk Device Names].
 
 `mount-point`::
 An existing directory on which to mount the file system.
@@ -1684,7 +1684,7 @@ Typing a `t` and pressing kbd:[Tab] again is enough to let the shell determine w
 Another feature of the shell is the use of environment variables.
 Environment variables are a variable/key pair stored in the shell's environment.
 This environment can be read by any program invoked by the shell, and thus contains a lot of program configuration.
-crossref:basics[shell-env-vars,.Common Environment Variables] provides a list of common environment variables and their meanings.
+crossref:basics[shell-env-vars,Common Environment Variables] provides a list of common environment variables and their meanings.
 Note that the names of environment variables are always in uppercase.
 
 [[shell-env-vars]]
