--- a/documentation/content/en/books/handbook/security/_index.adoc
+++ b/documentation/content/en/books/handbook/security/_index.adoc
@@ -870,7 +870,7 @@ PubkeyAuthentication yes
 ....
 
 Once the configuration is done, the users will have to send the system administrator their *public key* and these keys will be added in [.filename]#.ssh/authorized_keys#.
-The process for generating the keys is described in crossref:security[Key-based Authentication].
+The process for generating the keys is described in crossref:security[security-ssh-keygen, Key-based Authentication].
 
 Then restart the server executing the following command:
 
