--- a/website/content/en/security/_index.adoc
+++ b/website/content/en/security/_index.adoc
@@ -104,7 +104,7 @@ link:unsupported[Older releases] are not supported and users are strongly encour
 |===
 |Branch |Release |Release Date |Expected EoL
 |stable/14 |n/a |n/a |November 30, 2028
-|releng/14.1 |14.1-RELEASE |June 4, 2024 |14.2-RELEASE + 3 months
+|releng/14.1 |14.1-RELEASE |June 4, 2024 |March 31, 2025
 |releng/14.0 |14.0-RELEASE |November 20, 2023 |September 30, 2024
 |stable/13 |n/a |n/a |April 30, 2026
 |releng/13.4 |13.4-RELEASE |September 17, 2024 |June 30, 2025
